--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block header %}<title>Coffee or Wine</title>{% endblock %}
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' */unpkg.com/*"> -->
 </head>
 
 <body>
@@ -22,8 +23,8 @@
     </main>
 
     {% endblock %}
-
-    <script src="static.js" type="text/javascript"></script>
+    <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
+    <script src="static.js" type="application/javascript"></script>
 </body>
 
 </html>
