--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,56 @@
-body {
+html, body {
     width: 100vw;
     height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    text-align: center;
+    background-color: #2f2f2f;
+    color: #FFF;
+    background: linear-gradient(180deg, #BB3523 0%, rgba(187, 53, 35, 0) 100%);
+}
+
+h1 {
+    font-family: 'Gorditas', Arial, Helvetica, sans-serif;
+    font-size: 36px;
+    line-height: 44px;
+}
+
+main {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+button {
+    width: 185px;
+    height: 73px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 10px;
+    font-family: 'Gothic A1';
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 30px;
+    text-align: center;
+}
+
+.Btn-Coffee {
+    background: #6F4E37;
+    color: inherit;
+}
+
+.Btn-Wine {
+    background: #722F37;
+    color: inherit;
+}
+
+span {
+    font-size: 36px;
+    line-height: 44px;
+    color: #2f2f2f;
+    font-family: 'Gorditas', Arial, Helvetica, sans-serif;
 }
