--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <h1>Would you like...</h1>
 
     <main>
+        <p>Please allow access to your location before we can assist you</p>
         <button class="Btn-Coffee">
             Coffee
         </button>
