--- a/templates/base.html
+++ b/templates/base.html
@@ -13,14 +13,18 @@
     <h1>Would you like...</h1>
 
     <main>
-        <p>Please allow access to your location before we can assist you</p>
+        <p class="allow-message">Please allow access to your location before we can assist you</p>
+
         <button class="Btn-Coffee">
             Coffee
         </button>
+
         <span>or</span>
+
         <button class="Btn-Wine">
             Wine
         </button>
+
     </main>
 
     {% endblock %}
